# spit

./: .envrc  .gitignore  README.org  dune-project  shell.nix  spit.opam  spit.opam.locked
.github/workflows/: workflow.yml
lib/: ast.ml  ast.mli  builtins.ml  builtins.mli  dune  errors.ml  errors.mli  evaluator.ml  evaluator.mli  lexer.mll  menhir_parser.mly  parser.ml  parser.mli  repl.ml  sum.ml  utils.ml  utils.mli  value.ml  value.mli
lib/lisp/: stdlib.lisp
test/: dune  test-booleans.t  test-comparisons.t  test-defmacro-star.t  test-errors.t  test-lambda.t  test_stdlib.ml
