(ocamllex
 (modules lexer))

(menhir
 (modules menhir_parser))

(rule
 (with-stdout-to
  stdlib_lisp.ml
  (progn
   (echo "let src = {|")
   (cat lisp/stdlib.lisp)
   (echo "|}"))))

(library
 (name spit)
 (libraries core core_unix core_unix.sys_unix nice_parser lambda-term)
 (preprocess
  (pps ppx_jane))
 (inline_tests))
